# arbol

./: arboldedecisiones.py  pyproject.toml
arbol.py/: arbol.py  main.py  nodo.py
